test/samples/valid/map.maruir
var m1: map(u8, u8[]* #memory) *#memory = { 0_u8: [1_u8, 2_u8], 1_u8: [3_u8, 4_u8] }
var m2: map(u8, u8[]* #memory) *#memory = { }

fun testPrimitiveMap()
locals m: map(u256, u256) *#memory,
       b: bool;
{
    entry:
        m := alloc map(u256, u256) in #memory;
        b := m contains 0_u256;
        assert !b;
        return;
}
