test/samples/invalid/tc/map1.maruir
fun testPrimitiveMap()
locals m: map(u256, u256) *#storage;
{
    entry:
        m := alloc map(u256, u256) in #memory;
        return;
}
